--- a/package.json
+++ b/package.json
@@ -10,9 +10,20 @@
         "production": "mix --production"
     },
     "devDependencies": {
+        "@tailwindcss/forms": "^0.5.0",
         "axios": "^0.25",
         "laravel-mix": "^6.0.6",
         "lodash": "^4.17.19",
-        "postcss": "^8.1.14"
+        "postcss": "^8.1.14",
+        "tailwindcss": "^3.0.24"
+    },
+    "dependencies": {
+        "@headlessui/vue": "^1.5.0",
+        "@heroicons/vue": "^1.0.6",
+        "flowbite": "^1.4.2",
+        "vue": "^3.2.31",
+        "vue-loader": "^17.0.0",
+        "vue-router": "^4.0.14",
+        "vuex": "^4.0.2"
     }
 }
